# blackduck_remediation_metrics

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  QUICKSTART.md  README.md  install.ps1  pyproject.toml  release.ps1  requirements.txt  setup.py
src/blackduck_remediation_metrics/: __init__.py  __main__.py  blackduck_triage_extract.py
src/blackduck_remediation_metrics/templates/: BD_Results_Distribution_by_Triage_Status_v3.html  BD_Results_Triage_Dashboard.html
tests/: __init__.py  test_basic.py
